# nodc-codes

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/nodc_codes/: __init__.py  translate_codes.py
src/nodc_codes/CONFIG_FILES/: translate_codes.txt  translate_codes_NEW.txt
tests/: test_translate_code.py
