[project]
name = "nodc-codes"
version = "0.2.0"
description = "Python package to handle cod translations in Swedish NODC"
authors = [
    {name = "Magnus Wenzer", email = "magnus.wenzer@smhi.se"},
    {name = "Jonatan Skogsfors", email = "jonatan.skogsfors@smhi.se"},
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=4.5.1",
    "pytest>=8.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]