[project]
name = "nodc-codes"
version = "2.0.0b"
description = "Python package to handle code translations in Swedish NODC"
authors = [
    {name = "Magnus Wenzer", email = "magnus.wenzer@smhi.se"},
    {name = "Jonatan Skogsfors", email = "jonatan.skogsfors@smhi.se"},
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.26.0",
]

[project.scripts]
nodc-codes = "nodc-codes:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
